K8's Manifests/deploymentB.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: api
  namespace: three-tier
  labels: 
    role: api
    env: demo
spec: 
  replicas: 2
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector: 
    matchLabels:
      role: api
  template:
    metadata:
      labels:
        role: api
    spec:
      # imagePullSecrets:
      # - name: ecr-registry-secret
      containers:
      - name: api
        image: public.ecr.aws/y2h5i6h0/three-tier-backend:7
        imagePullPolicy: Always
        ports:
        - containerPort: 3500
        livenessProbe: 
          httpGet:
            path: /ok
            port: 3500
          initialDelaySeconds: 2
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /ok
            port: 3500
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
