K8's Manifests/deploymentF.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: three-tier
  labels:
    role: frontend
    env: demo
spec: 
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels: 
      role: frontend
  template:
    metadata:
      labels:
        role: frontend
    spec: 
      # imagePullSecrets:
      # - name: ecr-registry-secret
      containers:
      - name: frontend
        image: public.ecr.aws/y2h5i6h0/three-tier-frontend:7
        imagePullPolicy: Always
        # env:
        #   - name: REACT_APP_BACKEND_URL
        #     value: "http://backend.amanpathakdevops.study/api/tasks"
        ports:
        - containerPort: 3000
